modification de mes données perso

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cmake.sourceDirectory": "/Users/bilalbarar/Documents/Cours/Polytech 5A/PFE/brain_music/linux"
+  "cmake.sourceDirectory": "/Users/bilalbarar/Documents/Cours/Polytech 5A/PFE/brain_music/linux",
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
