--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.2.8
+  path: ^1.8.2
+  sqflite_common_ffi: any
+  shared_preferences: ^2.0.10
+  share: ^2.0.4
+  sqflite_common_ffi_web: ^0.3.5+1
+  path_provider: ^2.0.10  # Utilisez la dernière version disponible
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
