--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite_common_ffi_web: ^0.3.5+1
   path_provider: ^2.0.10  # Utilisez la dernière version disponible
   flutter_blue: ^0.8.0
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
