--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,10 @@ dependencies:
   share: ^2.0.4
   sqflite_common_ffi_web: ^0.3.5+1
   path_provider: ^2.0.10  # Utilisez la dernière version disponible
-  flutter_blue: ^0.8.0
   app_settings: ^5.1.1
-
+  audioplayers: ^4.1.0
+  #flutter_blue: ^0.8.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,3 +65,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/BrainMusiqueExp.mp3
+
