--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,11 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
-
-
-
-
+  sdk: ">=2.18.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,11 +37,11 @@ dependencies:
   shared_preferences: ^2.0.10
   share: ^2.0.4
   sqflite_common_ffi_web: ^0.3.5+1
-  path_provider: ^2.0.10  # Utilisez la dernière version disponible
+  path_provider: ^2.0.10 # Utilisez la dernière version disponible
   app_settings: ^5.1.1
   audioplayers: ^4.1.0
-  #flutter_blue: ^0.8.0
-  
+  flutter_blue: ^0.8.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,4 +62,3 @@ flutter:
   assets:
     - assets/
     - assets/BrainMusiqueExp.mp3
-
