--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cmake.sourceDirectory": "/Users/bilalbarar/Documents/Cours/Polytech 5A/PFE/brain_music/linux",
+  "cmake.sourceDirectory": "/Users/bilalbarar/Documents/Cours/Polytech_5A/PFE/BrainMusic/linux",
   "java.configuration.updateBuildConfiguration": "interactive"
 }
